style.css
/*.afacad-flux-afacad{*/
/*  font-family: "Afacad Flux", sans-serif;*/
/*  font-optical-sizing: auto;*/
/*  font-weight: 100;*/
/*  font-style: normal;*/
/*  font-variation-settings:*/
/*    "slnt" 0;*/
/*}*/

a{
    color: unset;
    text-decoration: unset;
    target: "_blank";
}

p{
  font-family: "Afacad Flux", sans-serif;
  font-size: 40px;
  color: white;
}

h1{
  color: white;
}

#bgVideo{
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  z-index: -1;
}
/*html{*/
/*  background-color: black;*/
/*}*/

#pfp img{
  width: 400px;
  height: 400px;
  border-radius: 200px;
}

#cover img{
  width: 100%;
  height: ;
  overflow: hidden;
}

.row{
  display: flex; /* Enables flexbox */ 
  justify-content: center; /* Aligns items in a row with space between */ 

}

.glass-container{
  box-shadow: inset 0 0 15px rgba(135, 135, 135, .1), 0 0 18px 3px rgba(0, 0, 0, .3);
  width: auto;
  text-align: center;
  /*margin: auto;*/
  /*background-color: gray;  */
  /*border: 5px solid gray;*/

  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(10px); height: auto; 
}

.project-wrap{
  box-shadow: inset 0 0 15px rgba(135, 135, 135, .1), 0 0 18px 3px rgba(0, 0, 0, .3);
  border-radius: 10px;
  width: 400px;
  text-align: center;
  margin: auto;
  background-color: rgba(10, 10, 10, 0.5);
  backdrop-filter: blur(10px); height: auto; 
  height: 250px;
}

.project-thumb img{
  width: 400px;
  height: 200px;
  object-fit:scale-down;
}

body{
  background-color: white;
}

